# TelegramGifts

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml  setup.py  test_library.py
TelegramGifts/: __init__.py  cache.py  client.py  exceptions.py  types.py
docs/: index.md
