[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TelegramGifts"
version = "1.0.0"
authors = [
  { name="Samy Mahmoud", email="Samymheg@gmail.com" },
]
description = "A powerful, offline-first Python library for fetching Telegram Gifts metadata, models, prices, and custom emojis."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "telegram", "gifts", "api", "sdk", "nft", 
    "getgems", "fragment", "tgmrkt", "prices",
    "telegram-gifts", "no-api-key", "python"
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/ssamy2/TelegramGifts"
"Bug Tracker" = "https://github.com/ssamy2/TelegramGifts/issues"
"Contact" = "https://t.me/Sami3d"
