[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TelegramGifts"
version = "1.0.2"
authors = [
  { name="Samy Mahmoud", email="Samymheg@gmail.com" },
]
description = "A powerful, offline-first Python library for fetching Telegram Gifts metadata, models, prices, and custom emojis."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "telegram", "telegram-gifts", "telegram-nft", "telegram-bot", 
    "python", "python-sdk", "nft", "fragment", 
    "upgraded-and-not-upgraded-telegram-nft", "getgems", "tgmrkt", 
    "gift-prices", "nft-marketplace", "api-wrapper", "sdk", 
    "no-auth", "no-token", "no-api-key", "ton", "telegram-stickers", 
    "portal-prices"
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/ssamy2/TelegramGifts"
"Documentation" = "https://github.com/ssamy2/TelegramGifts/tree/main/docs"
"Bug Tracker" = "https://github.com/ssamy2/TelegramGifts/issues"
"Contact" = "https://t.me/Sami3d"

[tool.setuptools.packages.find]
include = ["TelegramGifts*"]
exclude = ["TG_Photos_repo*", "tools*"]
